--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+server.port=8080 
 
+spring.datasource.url=postgressql://localhost:5432/ms-email
+spring.datasource.username=postgres
+spring.datasource.password=banco123
+spring.jpa.hibernate.ddl-auto=update
